[package]
name = "steamr"
version = "0.2.0"
description = "HTTP client library to communicate with Valve's Steam API"
edition = "2021"
homepage = "https://github.com/bellackn/steamr"
repository = "https://github.com/bellackn/steamr"
readme = "README.md"
keywords = ["steam-api", "steam"]
categories = ["api-bindings"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
