[package]
name = "steamr"
version = "0.3.0"
description = "HTTP client library to communicate with Valve's Steam API"
edition = "2021"
homepage = "https://github.com/bellackn/steamr"
repository = "https://github.com/bellackn/steamr"
readme = "README.md"
keywords = ["steam-api", "steam"]
categories = ["api-bindings"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.12.1", features = ["blocking", "json"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
